--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 html,
 body {
     height: 100%;
-    background-color: #ebebeb;
+    background-color: #ffffff;
 }
 
 a,
@@ -47,12 +47,12 @@ h3 {
 .nav {
     display: flex;
     justify-content: center;
-    background-color: white;
+    background-color: #f5f5f5;
     flex-wrap: wrap;
 }
 
 .nav>a:hover {
-    background-color: rgb(136, 207, 255, 0.5);
+    background-color: #e3f4ff;
     color: black;
 }
 
@@ -115,7 +115,7 @@ h3 {
 }
 
 #main-text {
-    background-color: #ebebeb;
+    background-color: #ffffff;
     justify-content: start;
     flex-direction: column;
     text-align: start;
@@ -137,7 +137,7 @@ h3 {
 }
 
 #main3-text {
-    background-color: #ebebeb;
+    background-color: #ffffff;
     display: flex;
     justify-content: start;
     flex-direction: column;
@@ -164,7 +164,7 @@ h3 {
     display: flex;
     text-align: center;
     justify-content: space-between;
-    background-color: white;
+    background-color: #eaeaea;
     padding: 15px;
     text-align: end;
 }
@@ -203,7 +203,7 @@ h3 {
 }
 
 form {
-    background: #ebebeb;
+    background: #ffffff;
     padding-bottom: 50px;
     padding-left: 300px;
     padding-right: 300px;
@@ -214,7 +214,9 @@ form {
 input,
 textarea {
     font-size: 18px;
-    border-style: none;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #d4d4d4;
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 10px;
